[workspace]
members = ["graphql-starter", "graphql-starter-macros"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lasantosr/graphql-starter-rs"
keywords = ["graphql", "starter", "api"]
categories = ["rust-patterns", "web-programming"]
exclude = [".vscode/*", ".rustfmt.toml", ".clippy.toml", ".taplo.toml"]

[workspace.dependencies]
graphql-starter-macros = { version = "=0.7.0", path = "./graphql-starter-macros", default-features = false }

ansi-to-html       = "0.2"
anyhow             = "1"
async-graphql      = "7.0.6"
async-graphql-axum = "7"
async-trait        = "0.1.64"
axum               = "0.7.4"
axum-server        = "0.7"
base64             = "0.22"
bytes              = "1"
chrono             = "0.4"
darling            = "0.20"
error-info         = "0.3"
figment            = "0.10"
futures-util       = "0.3"
http               = "1"
hyper              = "1"
hyper-util         = "0.1.2"
indexmap           = "2"
iter-flow          = "0.1"
linkme             = "0.3"
mime               = "0.3"
parking_lot        = "0.12"
paste              = "1"
pin-project-lite   = "0.2"
proc-macro-error2  = "2"
proc-macro2        = "1"
quote              = "1"
rcgen              = "0.13"
regex              = "1"
serde              = "1"
serde_json         = "1"
sqlx               = { version = "0.8", features = ["runtime-tokio-native-tls"] }
strip-ansi-escapes = "0.2"
strum              = "0.26"
syn                = "2"
tokio              = "1"
tokio-stream       = "0.1"
tokio-util         = "0.7"
tower              = "0.5"
tower-http         = "0.6"
tracing            = "0.1"
tracing-error      = "0.2"
tracing-subscriber = "0.3"
ulid               = "1"
uuid               = "1"
