[package]
name = "graphql-starter-macros"
description = "Macros for graphql-starter crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
subject = []
sqlx = []

[dependencies]
darling           = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
